--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1815,227 +1815,75 @@ body {
     padding-left: 4rem;
   }
 }
-.cid-qQMHGoGD7H {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ff3366;
-}
-.cid-qQMHGoGD7H .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-qQMHGoGD7H .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qQMHGoGD7H .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qQMHGoGD7H .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qQMHGoGD7H .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-qQMHGoGD7H .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-qQMHGoGD7H .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-qQMHGoGD7H .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-qQMHGoGD7H .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-}
-.cid-qQMIvh3H6c {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-qQMIvh3H6c .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-qQMIvh3H6c .media-container-row {
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.cid-qQMIvh3H6c .mbr-text {
-  color: #767676;
-}
-.cid-qQMIvh3H6c .mbr-author-desc {
-  display: block;
-  color: #767676;
-}
-.cid-qQMIvh3H6c .mbr-author-name {
-  color: #767676;
-}
-.cid-qQMIvh3H6c .mbr-testimonial .panel-item {
-  background-color: #ffffff;
-}
-.cid-qQMIvh3H6c .mbr-testimonial .card-block {
-  -webkit-flex-grow: 0;
-  flex-grow: 0;
-  padding: 2.4rem 2.4rem 0 2.4rem;
-}
-.cid-qQMIvh3H6c .mbr-testimonial .card-block .testimonial-photo {
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  margin-bottom: 1.6rem;
-  overflow: hidden;
-  border-radius: 50%;
-}
-.cid-qQMIvh3H6c .mbr-testimonial .card-block .testimonial-photo img {
-  width: 100%;
-  min-width: 100%;
-  min-height: 100%;
-}
-.cid-qQMIvh3H6c .mbr-testimonial .card-footer {
-  padding-bottom: 2.4rem;
-  border-top: 0;
-  padding-top: 1rem;
-  word-wrap: break-word;
-  word-break: break-word;
-  background: none;
-}
-@media (max-width: 300px) {
-  .cid-qQMIvh3H6c .testimonial-photo {
-    width: 100% !important;
-    height: auto !important;
-  }
-}
-.cid-qQMHZAap9s {
-  padding-top: 45px;
-  padding-bottom: 45px;
+.cid-qQN0C2gC2L {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #2e2e2e;
 }
-@media (max-width: 767px) {
-  .cid-qQMHZAap9s .content {
-    text-align: center;
-  }
-  .cid-qQMHZAap9s .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-.cid-qQMHZAap9s .img-logo img {
-  height: 6rem;
-}
-.cid-qQMHZAap9s [type="email"] {
-  font-size: .75rem;
-  margin-bottom: 5px;
-  text-align: center;
-  min-width: 150px;
-}
-.cid-qQMHZAap9s .input-group-btn {
-  display: inline-block;
-}
-.cid-qQMHZAap9s .input-group-btn a.btn {
-  margin: 0 !important;
-}
-.cid-qQMHZAap9s .input-group {
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
+.cid-qQN0C2gC2L .row-links {
+  width: 100%;
   justify-content: center;
 }
-.cid-qQMHZAap9s [type="submit"] {
-  padding: .75rem 1.5625rem !important;
-  margin-left: .625rem;
-  text-transform: none;
+.cid-qQN0C2gC2L .social-row {
+  width: 100%;
+  justify-content: center;
 }
-.cid-qQMHZAap9s .social-list {
+.cid-qQN0C2gC2L .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qQN0C2gC2L .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qQN0C2gC2L .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qQN0C2gC2L .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qQN0C2gC2L .media-container-row .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
 }
-.cid-qQMHZAap9s .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
+.cid-qQN0C2gC2L .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
 }
-.cid-qQMHZAap9s .social-list .soc-item {
+.cid-qQN0C2gC2L .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-qQMHZAap9s .social-list a {
+.cid-qQN0C2gC2L .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-qQMHZAap9s .social-list a:hover {
+.cid-qQN0C2gC2L .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-qQMHZAap9s .social-list {
+  .cid-qQN0C2gC2L .media-container-row .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-@media (max-width: 767px) {
-  .cid-qQMHZAap9s .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
+.cid-qQN0C2gC2L .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
 }
-.cid-qQMHZAap9s .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-qQMHZAap9s form .input-group input.form-control,
-.cid-qQMHZAap9s form .input-group-btn .btn {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-.cid-qQMHZAap9s .form-inline {
-  justify-content: center;
-}
-.cid-qQMHZAap9s .form-group {
-  margin: 0;
-}
-@media (max-width: 767px) {
-  .cid-qQMHZAap9s .foot-logo {
-    text-align: center !important;
-  }
-  .cid-qQMHZAap9s .foot-title {
-    text-align: center !important;
-  }
-  .cid-qQMHZAap9s .mbr-text {
-    text-align: center !important;
-  }
+.cid-qQN0C2gC2L .media-container-row .row-copirayt p {
+  width: 100%;
 }
 .cid-qQMGjhECvF .navbar {
   padding: .5rem 0;
